# ocaml-universal-installer

./: .gitignore  .yaloconf  CHANGES.md  CONTRIBUTING.md  README.md  alt-ergo-oui.json  dune-project  oui.opam  shell.nix
.github/scripts/: test-alt-ergo.sh  test-frama-c-plugin.sh
.github/workflows/: build-nix.yml  linux.yml  macos.yml  main.yml  unix.yml  windows.yml
alt-ergo-bundle/doc/alt-ergo-lib/: CHANGES.md
alt-ergo-bundle/lib/alt-ergo-lib/: META
data/wix/: WixUI_CustomApp.wxs  WixUI_CustomPlugin.wxs
doc/: README.md
src/opam-oui/: dune  main.ml
src/opam-wix/: main.ml
src/oui/: build.ml  build.mli  dune  lint.ml  main.ml
src/oui_cli/: args.ml  args.mli  dune  errors.ml  errors.mli  man.ml  man.mli  warnings.ml  warnings.mli
src/oui_lib/: codesign.ml  codesign.mli  compat.ml  config.ml  data.ml  dune  file.ml  info_plist.ml  info_plist.mli  install_name_tool.ml  install_name_tool.mli  installer_config.ml  installer_config.mli  ldd.ml  ldd.mli  letop.ml  letop.mli  macos_app_bundle.ml  macos_app_bundle.mli  macos_postinstall.ml  macos_postinstall.mli  makeself_backend.ml  makeself_backend.mli  opam_conf_file.ml  opam_conf_file.mli  opam_frontend.ml  opam_frontend.mli  otool.ml  otool.mli  pkgbuild_backend.ml  pkgbuild_backend.mli  plugin_utils.ml  plugin_utils.mli  sh_script.ml  sh_script.mli  string_with_vars.ml  string_with_vars.mli  system.ml  system.mli  types.ml  (+8 more)
tests/cygwin/: basic.t  dune
tests/mingw/: basic.t  dune
tests/oui_lib/: dune  test_ldd.ml  test_makeself_backend.ml  test_otool.ml  test_plist.ml  test_string_with_vars.ml
(+15 files in other folders)
