opam-version: "2.0"
name: "oui"
version: "0.1"
maintainer: "Mohamed Hernouf <mohamed.hernouf@ocamlpro.com>"
authors: [
    "Raja Boujbel"
    "Mohamed Hernouf"
]
tags: ["wix" "msi" "windows" "cygwin"]
license: "GPL-3.0-only"
homepage: "https://github.com/OCamlPro/ocaml-universal-installer"
bug-reports: "https://github.com/OCamlPro/ocaml-universal-installer/issues"
depends: [
  "ocaml" {build & >= "4.11.0"}
  "dune" {build & >= "3.2"}
  "cmdliner" {>= "1.3"}
  "markup"
  "crunch" {>= "3.3.1"}
  "opam-client" {>= "2.4" & = opam-version}
  "opam-format" {>= "2.4" & = opam-version}
  "fmt"
  "yojson"
  "ppx_deriving_yojson"
  "ppx_expect" {with-test}
]
build: [
    "dune"
    "build"
    "-j" jobs
    "-p" name
    "@runtest" {with-test}
]
dev-repo: "git+https://github.com/OCamlPro/ocaml-universal-installer"
synopsis: "A tool that builds standalone installers for your OCaml applications"
description: """
oui is a command-line tool that generates standalone installers for Linux, Windows and
macOS from your OCaml and non OCaml binaries.
"""
flags: plugin
